{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 67,
  "lineage": "fb7c25cd-f55c-3dd4-791a-be7f233722f3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d07d65c47e5aa90",
            "arn": "arn:aws:ec2:us-west-2:175985118028:instance/i-04ab99d8440595220",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ab99d8440595220",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-034c84b0f79d6e0f7",
            "private_dns": "ip-172-31-24-246.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.246",
            "public_dns": "ec2-34-217-12-73.us-west-2.compute.amazonaws.com",
            "public_ip": "34.217.12.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "AttachedInstance": "i-04ab99d8440595220 - test_instance",
                  "Owner": "rudolph"
                },
                "throughput": 125,
                "volume_id": "vol-02356e0e901e4be95",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a4d52f629b90fd5",
            "tags": {
              "Name": "App_Server-Nfor"
            },
            "tags_all": {
              "Name": "App_Server-Nfor"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d6adf401f86f9ff5"
            ]
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175985118028:network-acl/acl-0c15e604c31700667",
            "default_network_acl_id": "acl-0c15e604c31700667",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c15e604c31700667",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "175985118028",
            "subnet_ids": [
              "subnet-02d776227ea2fe176",
              "subnet-050f27a477c702485",
              "subnet-06960fd94402b35a7",
              "subnet-09c7b13d4cf385859",
              "subnet-0d6e90500531ed6a2",
              "subnet-0ecd01278ba658c47"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b63078163da74c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175985118028:route-table/rtb-09e028a99b4873e56",
            "default_route_table_id": "rtb-09e028a99b4873e56",
            "id": "rtb-09e028a99b4873e56",
            "owner_id": "175985118028",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-00b63078163da74c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175985118028:security-group/sg-0959b7a70df670c8e",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0959b7a70df670c8e",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "175985118028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b63078163da74c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a2d6464513a4b3d",
            "association_id": "eipassoc-0239c7d2fcb107f7a",
            "domain": "vpc",
            "id": "eipalloc-07a2d6464513a4b3d",
            "network_border_group": "us-east-2",
            "network_interface": "eni-06c03e44b2ab561f1",
            "private_dns": "ip-10-0-101-163.us-east-2.compute.internal",
            "private_ip": "10.0.101.163",
            "public_dns": "ec2-3-136-203-158.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.203.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0faf8d997f26c4c4b",
            "association_id": "eipassoc-0a21968da643b0c7e",
            "domain": "vpc",
            "id": "eipalloc-0faf8d997f26c4c4b",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0d42bf8622db40653",
            "private_dns": "ip-10-0-102-28.us-east-2.compute.internal",
            "private_ip": "10.0.102.28",
            "public_dns": "ec2-3-136-139-191.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.139.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-us-east-2b",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a59a7b287c48fe7d",
            "association_id": "eipassoc-0558601cd8e781622",
            "domain": "vpc",
            "id": "eipalloc-0a59a7b287c48fe7d",
            "network_border_group": "us-east-2",
            "network_interface": "eni-019e8ab475da8e6f0",
            "private_dns": "ip-10-0-103-249.us-east-2.compute.internal",
            "private_ip": "10.0.103.249",
            "public_dns": "ec2-3-130-116-92.us-east-2.compute.amazonaws.com",
            "public_ip": "3.130.116.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-us-east-2c",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175985118028:internet-gateway/igw-0f03101cde0c1dd4e",
            "id": "igw-0f03101cde0c1dd4e",
            "owner_id": "175985118028",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b63078163da74c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a2d6464513a4b3d",
            "association_id": "eipassoc-0239c7d2fcb107f7a",
            "connectivity_type": "public",
            "id": "nat-0a607ce0c4f50349e",
            "network_interface_id": "eni-06c03e44b2ab561f1",
            "private_ip": "10.0.101.163",
            "public_ip": "3.136.203.158",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06960fd94402b35a7",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0faf8d997f26c4c4b",
            "association_id": "eipassoc-0a21968da643b0c7e",
            "connectivity_type": "public",
            "id": "nat-0551dc1a06be9bddc",
            "network_interface_id": "eni-0d42bf8622db40653",
            "private_ip": "10.0.102.28",
            "public_ip": "3.136.139.191",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02d776227ea2fe176",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-us-east-2b",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a59a7b287c48fe7d",
            "association_id": "eipassoc-0558601cd8e781622",
            "connectivity_type": "public",
            "id": "nat-02cc4dccf37a8ce3e",
            "network_interface_id": "eni-019e8ab475da8e6f0",
            "private_ip": "10.0.103.249",
            "public_ip": "3.130.116.92",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09c7b13d4cf385859",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-us-east-2c",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00aac27251691ab8f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a607ce0c4f50349e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00aac27251691ab8f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-061ab8b8e175026c61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0551dc1a06be9bddc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-061ab8b8e175026c6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-082f83bbcda049fda1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02cc4dccf37a8ce3e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-082f83bbcda049fda",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f03101cde0c1dd4e",
            "id": "r-rtb-044ac0455fd99c2b11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-044ac0455fd99c2b1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175985118028:route-table/rtb-00aac27251691ab8f",
            "id": "rtb-00aac27251691ab8f",
            "owner_id": "175985118028",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a607ce0c4f50349e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-private-us-east-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b63078163da74c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175985118028:route-table/rtb-061ab8b8e175026c6",
            "id": "rtb-061ab8b8e175026c6",
            "owner_id": "175985118028",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0551dc1a06be9bddc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-private-us-east-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b63078163da74c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175985118028:route-table/rtb-082f83bbcda049fda",
            "id": "rtb-082f83bbcda049fda",
            "owner_id": "175985118028",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02cc4dccf37a8ce3e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-private-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-private-us-east-2c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b63078163da74c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175985118028:route-table/rtb-044ac0455fd99c2b1",
            "id": "rtb-044ac0455fd99c2b1",
            "owner_id": "175985118028",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f03101cde0c1dd4e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b63078163da74c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0393ec9dec0126397",
            "route_table_id": "rtb-00aac27251691ab8f",
            "subnet_id": "subnet-0d6e90500531ed6a2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0857e1272bfa18787",
            "route_table_id": "rtb-061ab8b8e175026c6",
            "subnet_id": "subnet-050f27a477c702485"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d36e729eb255fd18",
            "route_table_id": "rtb-082f83bbcda049fda",
            "subnet_id": "subnet-0ecd01278ba658c47"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dab4bd1430ac9f77",
            "route_table_id": "rtb-044ac0455fd99c2b1",
            "subnet_id": "subnet-06960fd94402b35a7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cafc3ccb28fb89cd",
            "route_table_id": "rtb-044ac0455fd99c2b1",
            "subnet_id": "subnet-02d776227ea2fe176"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcb0c13530336d87",
            "route_table_id": "rtb-044ac0455fd99c2b1",
            "subnet_id": "subnet-09c7b13d4cf385859"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175985118028:subnet/subnet-0d6e90500531ed6a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6e90500531ed6a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "175985118028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b63078163da74c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175985118028:subnet/subnet-050f27a477c702485",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-050f27a477c702485",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "175985118028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b63078163da74c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175985118028:subnet/subnet-0ecd01278ba658c47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecd01278ba658c47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "175985118028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-private-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-private-us-east-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b63078163da74c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175985118028:subnet/subnet-06960fd94402b35a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06960fd94402b35a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "175985118028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b63078163da74c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175985118028:subnet/subnet-02d776227ea2fe176",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d776227ea2fe176",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "175985118028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b63078163da74c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175985118028:subnet/subnet-09c7b13d4cf385859",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c7b13d4cf385859",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "175985118028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-public-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor-public-us-east-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-00b63078163da74c1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].use2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:175985118028:vpc/vpc-00b63078163da74c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c15e604c31700667",
            "default_route_table_id": "rtb-09e028a99b4873e56",
            "default_security_group_id": "sg-0959b7a70df670c8e",
            "dhcp_options_id": "dopt-0103b14d0b8568e64",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00b63078163da74c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e028a99b4873e56",
            "owner_id": "175985118028",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-Nfor",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}